--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -294,7 +294,7 @@
                         <picture>
                             <source srcset="./assets/img/product-preview.webp" alt="Товар."
                                 class="product__img--preview" width="261" height="212" media="(min-width: 744px)">
-                            <img srcs="./assets/img/product-preview-mob.webp" alt="Товар."
+                            <img src="./assets/img/product-preview-mob.webp" alt="Товар."
                                 class="product__img--preview" width="147" height="124">
                         </picture>
                     </div>
