Добавляет мобилку вебинара

--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -294,6 +294,9 @@
                 </ul>
             </div>
 
+            <h1 class="section__title webinar__title">
+                Обучение от  ООО "БьютиМедГрупп"
+            </h1>
             <!-- Главная Информация о вебинаре -->
             <section class="webinar-main">
                 <div class="webinar-main__pink">
@@ -339,8 +342,12 @@
                     </div>
                 </div>
                 <div class="webinar-main__decorative">
-                    <img src="./assets/img/webinar/webinar.webp" alt="Декоративное изображение." aria-hidden="true"
-                        width="437" height="616">
+                    <picture>
+                        <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение." aria-hidden="true"
+                        width="437" height="616" media="(min-width: 744px)">
+                        <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение." aria-hidden="true"
+                        width="220" height="310">
+                    </picture>
                 </div>
             </section>
 
@@ -474,8 +481,12 @@
                 </h2>
                 <div class="webinar-autor__content">
                     <div class="webinar-autor__img webinar-main__decorative">
-                        <img id="autor-photo" src="./assets/img/webinar/webinar.webp" alt="Автор курса." width="437"
-                            height="616">
+                        <picture>
+                            <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение." aria-hidden="true"
+                            width="437" height="616" media="(min-width: 744px)">
+                            <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение." aria-hidden="true"
+                            width="220" height="310">
+                        </picture>
                     </div>
                     <div class="webinar-autor__info">
                         <span class="webinar-autor__name">Варвара Краса</span>
