Добавляет мобилку данных лк

--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -324,7 +324,7 @@
                             </div>
                         </div>
                         <div class="pa-tabs__content">
-                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="personal-area">
+                            <div class="pa-tabs__content-item" id="personal-area">
                                 <div class="personal-area__pa">
                                     <div class="pa__left-column">
                                         <div class="pa__basket">
@@ -389,7 +389,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item" id="data">
+                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="data">
                                 <div class="personal-area__data">
                                     <div class="data__left-column">
                                         <div class="data__user data__section">
