Добавляет мобилку доставок лк

--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -389,7 +389,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="data">
+                            <div class="pa-tabs__content-item" id="data">
                                 <div class="personal-area__data">
                                     <div class="data__left-column">
                                         <div class="data__user data__section">
@@ -473,7 +473,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item" id="orders">
+                            <div class="pa-tabs__content-item " id="orders">
                                 <div class="personal-area__orders">
                                     <div class="orders">
                                         <ul class="delivery__list">
@@ -584,7 +584,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item" id="delivery">
+                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="delivery">
                                 <div class="personal-area__delivery">
                                     <div class="delivery">
                                         <ul class="delivery__list">
