Заканчивает мобильную версию

--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -324,7 +324,7 @@
                             </div>
                         </div>
                         <div class="pa-tabs__content">
-                            <div class="pa-tabs__content-item" id="personal-area">
+                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="personal-area">
                                 <div class="personal-area__pa">
                                     <div class="pa__left-column">
                                         <div class="pa__basket">
@@ -473,7 +473,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item " id="orders">
+                            <div class="pa-tabs__content-item" id="orders">
                                 <div class="personal-area__orders">
                                     <div class="orders">
                                         <ul class="delivery__list">
@@ -491,7 +491,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -501,7 +501,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -532,16 +532,17 @@
                                                         </div>
                                                         <span class="delivery-product__count">1 шт.</span>
                                                         <span class="delivery-product__price">121222 ₽</span>
-                                                        <button class="delivery-product__btn">Оставить отзыв к
-                                                            заказу</button>
+                                                        <button class="delivery-product__btn">
+                                                            <span>Оставить отзыв к заказу</span>
+                                                        </button>
                                                     </div>
                                                     <div class="delivery-content__info">
                                                         <div class="delivery-info__left-column">
-                                                            <p>Получатель: rustle_92@yandex.ru</p>
-                                                            <p>Телефон: +79000886666</p>
-                                                            <p>Адрес доставки: <span>не указан</span></p>
-                                                            <p>Оплата: Наложенный платеж</p>
-                                                            <p>Способ доставки: Почтой России</p>
+                                                            <div><p>Получатель:&nbsp;</p>rustle_92@yandex.ru</div>
+                                                            <div><p>Телефон:&nbsp;</p>+79000886666</div>
+                                                            <div><p>Адрес доставки:&nbsp;</p><span>не указан</span></div>
+                                                            <div><p>Оплата:&nbsp;</p>Наложенный платеж</div>
+                                                            <div><p>Способ доставки:&nbsp;</p> Почтой России</div>
                                                         </div>
                                                         <div class="delivery-info__right-column">
                                                             <div>
@@ -565,7 +566,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -575,7 +576,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -584,7 +585,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="delivery">
+                            <div class="pa-tabs__content-item" id="delivery">
                                 <div class="personal-area__delivery">
                                     <div class="delivery">
                                         <ul class="delivery__list">
@@ -602,7 +603,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -612,7 +613,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
@@ -622,7 +623,7 @@
                                                     <span class="delivery__num">112866</span>
                                                     <span class="delivery__date">06.03.2020</span>
                                                     <span class="delivery__status">новый</span>
-                                                    <span class="delivery__price">2 068</span>
+                                                    <span class="delivery__price">2 068 ₽</span>
                                                     <span class="delivery__payment">Наложенный платеж
                                                         интернет-магазин</span>
                                                 </div>
