Делает правки верстки

--- a/src/pages/article.html
+++ b/src/pages/article.html
@@ -332,6 +332,14 @@
                                 <span>Congue nisi vitae suscipit tellus mauris a diam maecenas</span>
                             </div>
                         </div>
+                        <div class="slider__btns slider__btns--company">
+                            <button class="slider__btn slider__btn--prev slider__btn--unactive">
+                                <span class="visually-hidden">Предыдущий слайд</span>
+                            </button>
+                            <button class="slider__btn slider__btn--next">
+                                <span class="visually-hidden">Следующий слайд</span>
+                            </button>
+                        </div>
                     </div>
                     <span class="article__text">
                         Arcu cursus euismod quis viverra. Nibh sit amet commodo nulla. Urna porttitor rhoncus dolor
@@ -391,7 +399,7 @@
 
             <!-- вам понравится -->
             <section class="products__you-like">
-                <h2 class="products-you-like section__title section__title--smaller">Наши товары</h2>
+                <h2 class="products-you-like section__title section__title--smaller">Наши продукты</h2>
                 <ul class="main-categories__content__list">
                     <li class="main-categories__content__item">
                         <div class="main-categories__card">
