--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -595,7 +595,7 @@
                 <h2 class="section__title--smaller section__title main-faq__title">Программа вебинара</h2>
                 <ul class="main-faq__list main-faq__list--webinar">
                     <li class="main-faq__item">
-                        <span class="main-faq__question">МОДУЛЬ 1 - Название данного модуля</span>
+                        <span class="main-faq__question main-faq__question--cases">МОДУЛЬ 1 - Название данного модуля</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
                         <button type="button" class="main-faq__btn">
@@ -603,7 +603,7 @@
                         </button>
                     </li>
                     <li class="main-faq__item main-faq__item--active">
-                        <span class="main-faq__question main-faq__question--active">Aenean euismod elementum nisi quis
+                        <span class="main-faq__question main-faq__question--active main-faq__question--cases--active">Aenean euismod elementum nisi quis
                             eleifend.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer main-faq__answer--active">
@@ -640,7 +640,7 @@
                         </button>
                     </li>
                     <li class="main-faq__item">
-                        <span class="main-faq__question">Gravida quis blandit turpis cursus in hac habitasse platea
+                        <span class="main-faq__question main-faq__question--cases">Gravida quis blandit turpis cursus in hac habitasse platea
                             dictumst.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
@@ -657,7 +657,7 @@
                         </button>
                     </li>
                     <li class="main-faq__item">
-                        <span class="main-faq__question">Dui sapien eget mi proin sed libero enim sed.</span>
+                        <span class="main-faq__question main-faq__question--cases">Dui sapien eget mi proin sed libero enim sed.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
                         <button type="button" class="main-faq__btn">
