Делает правки верстки

--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -293,7 +293,7 @@
 
             <!-- Личный кабинет после авторизации -->
             <section class="personal-area">
-                <h1 class="visually-hidden">Личный кабинет</h1>
+                <h1 class="personal-area__title">Личный кабинет</h1>
                 <div class="personal-area__content">
                     <div class="personal-area__tabs">
                         <div class="pa-tabs__header">
